--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/mayo_teleop
+script_dir=$base/lib/mayo_teleop
 [install]
-install-scripts=$base/lib/mayo_teleop
+install_scripts=$base/lib/mayo_teleop
